--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
 <body>
     <header>Todo List</header>
     <form>
-        <input type="text" class="todo-input">
+        <input type="text" class="todo-input" autofocus>
         <button class="todo-button" type="submit">
             <i class="fas fa-plus-square"></i>
         </button>
+        <div class="select">
+            <select style="
+            font-family: 'Poppins', sans-serif;" name="todos" class="filter-todo">
+                <option value="all">All</option>
+                <option value="completed">Completed</option>
+                <option value="uncompleted">Uncompleted</option>
+            </select>
+        </div>
     </form>
     <div class="todo-container">
         <ul class="todo-list"></ul>
